--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,6 +14,8 @@ All post
    <li><form method='post' action='/add_comment'>
  	  Likes :<input type='text' name='like' placeholder='1 or 0'><br>
    <input type='text' name='comment' placeholder = "any comment">
+   <input type='hidden' name='userId' value="<%= userId %>">
+
    </form></li>
 
 <% } %>
